Fix deployment again

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,8 +43,8 @@ jobs:
         run: bun i
 
       - name: Build with VitePress
-        run: bun build # or pnpm docs:build / yarn docs:build / bun run docs:build
-        
+        run: bun run build # or pnpm docs:build / yarn docs:build / bun run docs:build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
